Rationalize image tag and push

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ after_success:
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
 - docker tag $DOCKER_IMAGE:$TRAVIS_BUILD_NUMBER $DOCKER_IMAGE:$TAG
 - if [ ! -z "$TRAVIS_TAG" ]; then docker tag $DOCKER_IMAGE:$TRAVIS_BUILD_NUMBER $DOCKER_IMAGE:$TRAVIS_TAG ; fi
+- docker rmi $DOCKER_IMAGE:$TRAVIS_BUILD_NUMBER
 - docker push $DOCKER_IMAGE
   
 env:
